@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19920527
+MANIFEST for cm_tools, version t19920630
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
